--- a/frontend/src/sass/ProfileIntroduction.module.scss
+++ b/frontend/src/sass/ProfileIntroduction.module.scss
@@ -12,6 +12,8 @@
   .descriptionContainer{
     margin-top: 2%;
     color: global_variables.$primary_text_color;
+    margin-inline: 2%;
+    text-align: center;
     
   }
   .descriptionText{
