--- a/frontend/src/sass/ProjectExperience.module.scss
+++ b/frontend/src/sass/ProjectExperience.module.scss
@@ -7,6 +7,7 @@
         width: 80%;
         place-self: center;
         box-shadow: global_variables.$global-page-component-box-shadow;
+        // object-fit: scale-down;
 
     }
     
