--- a/frontend/src/stylesheets/ProfileIntroduction.module.css
+++ b/frontend/src/stylesheets/ProfileIntroduction.module.css
@@ -11,9 +11,31 @@
   font-size: 2rem;
   font-weight: 700;
   margin-bottom: 1rem;
-  text-align: center;
   padding-top: 1%;
   color: #ffffff;
+}
+
+.secondaryTitleCenter {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+  padding-top: 1%;
+  color: #ffffff;
+  text-align: center;
+}
+
+.thirdTitle {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+  padding-top: 1%;
+  color: #ffffff;
+}
+.thirdTitle .thirdTitleCenter {
+  text-align: center;
+}
+.thirdTitle .thirdTitleLeft {
+  text-align: left;
 }
 
 .regularText {
@@ -31,6 +53,8 @@
 .profileIntroductionContainer .descriptionContainer {
   margin-top: 2%;
   color: #ffffff;
+  margin-inline: 2%;
+  text-align: center;
 }
 .profileIntroductionContainer .descriptionText {
   font-size: 1.2rem;
