--- a/frontend/src/stylesheets/ProjectExperience.module.css
+++ b/frontend/src/stylesheets/ProjectExperience.module.css
@@ -11,9 +11,31 @@
   font-size: 2rem;
   font-weight: 700;
   margin-bottom: 1rem;
-  text-align: center;
   padding-top: 1%;
   color: #ffffff;
+}
+
+.secondaryTitleCenter {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+  padding-top: 1%;
+  color: #ffffff;
+  text-align: center;
+}
+
+.thirdTitle {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+  padding-top: 1%;
+  color: #ffffff;
+}
+.thirdTitle .thirdTitleCenter {
+  text-align: center;
+}
+.thirdTitle .thirdTitleLeft {
+  text-align: left;
 }
 
 .regularText {
