--- a/frontend/src/sass/_global_variables.scss
+++ b/frontend/src/sass/_global_variables.scss
@@ -52,3 +52,7 @@ $global-page-component-box-shadow: 0px 1px 12px 2px #000000;
 .regularText{
     color: $primary_text_color;
 }
+.regularTextCenter {
+    text-align: center;
+    color: $primary_text_color;
+}
