--- a/frontend/src/stylesheets/GlobalClasses.module.css
+++ b/frontend/src/stylesheets/GlobalClasses.module.css
@@ -42,6 +42,11 @@
   color: #ffffff;
 }
 
+.regularTextCenter {
+  text-align: center;
+  color: #ffffff;
+}
+
 .pageBodyContainer {
   background-color: #282a36;
   display: flex;
