--- a/frontend/src/stylesheets/NavigationHeader.module.css
+++ b/frontend/src/stylesheets/NavigationHeader.module.css
@@ -42,6 +42,11 @@
   color: #ffffff;
 }
 
+.regularTextCenter {
+  text-align: center;
+  color: #ffffff;
+}
+
 .primaryTitle {
   font-size: 2rem;
   font-weight: 700;
@@ -83,6 +88,11 @@
 }
 
 .regularText {
+  color: #ffffff;
+}
+
+.regularTextCenter {
+  text-align: center;
   color: #ffffff;
 }
 
