--- a/frontend/src/stylesheets/ProfileIntroduction.module.css
+++ b/frontend/src/stylesheets/ProfileIntroduction.module.css
@@ -42,6 +42,11 @@
   color: #ffffff;
 }
 
+.regularTextCenter {
+  text-align: center;
+  color: #ffffff;
+}
+
 .profileIntroductionContainer {
   display: flex;
   flex-direction: column;
@@ -51,7 +56,7 @@
   box-shadow: 0px 1px 12px 2px #000000;
 }
 .profileIntroductionContainer .descriptionContainer {
-  margin-top: 2%;
+  margin-top: 5%;
   color: #ffffff;
   margin-inline: 2%;
   text-align: center;
