--- a/frontend/src/stylesheets/ProjectExperience.module.css
+++ b/frontend/src/stylesheets/ProjectExperience.module.css
@@ -42,6 +42,11 @@
   color: #ffffff;
 }
 
+.regularTextCenter {
+  text-align: center;
+  color: #ffffff;
+}
+
 .projectExperiencesContainer .carrouselImageContainer {
   width: 80%;
   place-self: center;
