--- a/frontend/src/sass/_global_variables.scss
+++ b/frontend/src/sass/_global_variables.scss
@@ -2,6 +2,7 @@ $primary-color: #282a36;
 $secondary-color: #005bbb;
 $primary_text_color: #ffffff;
 $secondary-title-font-size: 2rem;
+$third-title-font-size: 1rem;
 $title-font-weight: 700;
 $primary_icon_color: #ffffff;
 
@@ -35,7 +36,7 @@ $global-page-component-box-shadow: 0px 1px 12px 2px #000000;
 }
 
 .thirdTitle {
-    font-size: $secondary-title-font-size;
+    font-size: $third-title-font-size;
     font-weight: $title-font-weight;
     margin-bottom: 1rem;
     padding-top: 1%;
